gccida/c1/combine_givs_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs_p/src/loop.c:7649:22: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs_p/src/loop.c:7649:39: error: unknown type name 'induction_1'
rtx  combine_givs_p( induction_1 *g1, induction_1 *g2) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs_p/src/loop.c:7653:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs_p/src/loop.c:7667:50: error: use of undeclared identifier 'machine_mode'
&& ( !v6 || g2->giv_type || !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)g2->mem + 2), v6)) ) 
                                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs_p/src/obj/loop.o] Error 1
